@@ -1,5 +1,12 @@
 2008-04-08  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (periodic_update_active_connection_timestamps): new function; update
+			active connection timestamps every 5 minutes
+		- (constructor, finalize): start/stop periodic update
+
+2008-04-08  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet-device-gsm.c
 	  src/applet-device-wireless.c
 	  src/applet-device-cdma.c
